test/libsolidity/natspecJSON/invalid/docstring_state_variable_too_many_return_tags.sol
contract test {
  /// @notice example of notice
  /// @dev example of dev
  /// @return returns something
  /// @return returns something
  uint public state;
}
// ----
// DocstringParsingError 2604: (18-137): Documentation tag "@return returns something" exceeds the number of return parameters.
